# benchmark

./: .gitignore  CMakeLists.txt  README.md  benchmark.h  example.cpp  main.cpp  test.cpp
benchtools/headers/: timer.h
benchtools/src/: filelog.cpp  timer.cpp
headers/: filelog.h  timer.h
src/: filelog.cpp  timer.cpp
